# stim

./: .gitignore  CMakeLists.txt  README.md
doc/: stim.md
src/: CMakeLists.txt  ice_version.F90.in  stim_version.F90.in
src/drivers/: cppdefs.h  getm_ice.F90  gotm_ice.F90
src/drivers/getm/: getm_stim.F90
src/drivers/gotm/: CMakeLists.txt  cppdefs.h  gotm_stim.F90
src/models/: CMakeLists.txt  ice_lebedev.F90  ice_models.F90  ice_mylake.F90  ice_variables.F90  ice_winton.F90  stim_models.F90  stim_variables.F90
src/models/basal_melt/: CMakeLists.txt  README.md  stim_basal_melt.F90
src/models/flato/: CMakeLists.txt  README.md  ice_thm.F90  ice_thm_flato.F90  ice_winton.F90.keep  stim_flato.F90
src/models/lebedev/: CMakeLists.txt  README.md  stim_lebedev.F90
src/models/mylake/: CMakeLists.txt  README.md  stim_mylake.F90
src/models/winton/: CMakeLists.txt  README.md  WINTON  ice_thm.F90  ice_thm.F90.org  ice_winton.F90.keep  stim_winton.F90
tests/: CMakeLists.txt  test_ice.F90  test_stim.F90
